issues/124.txt
[17:05:43] $ gitnextver;./release.sh
2025-07-14 17:06:23 | INFO     | Working in directory: /Users/adam/Developer/vcs/github.vexyart/vexy-svgo
2025-07-14 17:06:23 | INFO     | Stashing uncommitted changes before pull …
2025-07-14 17:06:23 | INFO     | Pulling from remote 'origin' …
2025-07-14 17:06:26 | INFO     | Successfully pulled from remote
2025-07-14 17:06:26 | INFO     | Re-applying stashed changes …
2025-07-14 17:06:27 | INFO     | Successfully re-applied stashed changes
2025-07-14 17:06:27 | INFO     | Last version tag: v1.0.33
2025-07-14 17:06:27 | INFO     | Next version will be: v1.0.34
╭───────────────────────────── 📋 Version Info ─────────────────────────────╮
│ Current version: v1.0.33                                                  │
│ Next version: v1.0.34                                                     │
╰───────────────────────────────────────────────────────────────────────────╯
2025-07-14 17:06:27 | INFO     | Adding all untracked and modified files...
2025-07-14 17:06:27 | INFO     | Committing changes with message: v1.0.34
2025-07-14 17:06:28 | INFO     | Creating tag: v1.0.34
2025-07-14 17:06:28 | INFO     | Pushing commits and tags to remote...
╭─────────────────────────────── 🎉 Success ────────────────────────────────╮
│ ✅ Successfully created and pushed version v1.0.34                        │
╰───────────────────────────────────────────────────────────────────────────╯
[INFO] Auto-incrementing version from v1.0.34 to 1.0.35
[INFO] Starting Vexy SVGO release process for version 1.0.35
[INFO] Updating version in workspace Cargo.toml
[INFO] Updating version in crate Cargo.toml files
[INFO]   - Updating benchmarks
[INFO]   - Updating cli
[INFO]   - Updating core
[INFO]   - Updating ffi
[INFO]   - Updating plugin-sdk
[INFO]   - Updating test-utils
[INFO]   - Updating wasm
[INFO] Updating workspace dependency versions
[INFO] Running tests
    Blocking waiting for file lock on package cache
   Compiling cfg-if v1.0.1
   Compiling serde v1.0.219
   Compiling once_cell v1.21.3
   Compiling memchr v2.7.5
   Compiling getrandom v0.3.3
   Compiling itoa v1.0.15
   Compiling libc v0.2.174
   Compiling typenum v1.18.0
   Compiling generic-array v0.14.7
   Compiling regex-syntax v0.8.5
   Compiling syn v2.0.104
   Compiling serde_json v1.0.140
   Compiling smallvec v1.15.1
   Compiling parking_lot_core v0.9.11
   Compiling lock_api v0.4.13
   Compiling libm v0.2.15
   Compiling num-traits v0.2.19
   Compiling bitflags v2.9.1
   Compiling log v0.4.27
   Compiling ryu v1.0.20
   Compiling rustix v1.0.7
   Compiling anyhow v1.0.98
   Compiling thiserror v1.0.69
   Compiling aho-corasick v1.1.3
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.15.4
   Compiling lazy_static v1.5.0
   Compiling scopeguard v1.2.0
   Compiling errno v0.3.13
   Compiling xmlparser v0.10.0
   Compiling cpufeatures v0.2.17
   Compiling fastrand v2.3.0
   Compiling roxmltree v0.7.3
   Compiling quick-xml v0.31.0
   Compiling regex-automata v0.4.9
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.6
   Compiling parking_lot v0.12.4
   Compiling digest v0.10.7
   Compiling base64 v0.22.1
   Compiling roxmltree v0.20.0
   Compiling sha2 v0.10.9
   Compiling urlencoding v2.1.3
   Compiling rand_core v0.6.4
   Compiling siphasher v1.0.1
   Compiling syn v1.0.109
   Compiling rand v0.8.5
   Compiling phf_shared v0.11.3
   Compiling crossbeam-utils v0.8.21
   Compiling getrandom v0.2.16
   Compiling ahash v0.7.8
   Compiling either v1.15.0
   Compiling rayon-core v1.12.1
   Compiling phf_generator v0.11.3
   Compiling zerocopy v0.8.26
   Compiling phf_codegen v0.11.3
   Compiling dtoa v1.0.10
   Compiling tempfile v3.20.0
   Compiling dtoa-short v0.3.5
   Compiling itertools v0.10.5
   Compiling arrayvec v0.7.6
   Compiling paste v1.0.15
   Compiling rkyv v0.7.45
   Compiling outref v0.1.0
   Compiling anstyle v1.0.11
   Compiling bytemuck v1.23.1
   Compiling simd-abstraction v0.7.1
   Compiling safe_arch v0.7.4
   Compiling parcel_selectors v0.28.2
   Compiling ahash v0.8.12
   Compiling matrixmultiply v0.3.10
   Compiling unicode-segmentation v1.12.0
   Compiling seahash v4.1.0
   Compiling utf8parse v0.2.2
   Compiling precomputed-hash v0.1.1
   Compiling matches v0.1.10
   Compiling anstyle-parse v0.2.7
   Compiling data-url v0.1.1
   Compiling convert_case v0.6.0
   Compiling wide v0.7.33
   Compiling regex v1.11.1
   Compiling base64-simd v0.7.0
   Compiling serde_derive v1.0.219
   Compiling thiserror-impl v1.0.69
   Compiling crossbeam-epoch v0.9.18
   Compiling hashbrown v0.12.3
   Compiling phf_macros v0.11.3
   Compiling cssparser-macros v0.6.1
   Compiling crossbeam-deque v0.8.6
   Compiling euclid v0.22.11
   Compiling num-integer v0.1.46
   Compiling phf v0.11.3
   Compiling approx v0.5.1
   Compiling num-complex v0.4.6
   Compiling derive_more-impl v2.0.1
   Compiling clap_derive v4.5.41
   Compiling selectors v0.30.0
   Compiling rayon v1.10.0
   Compiling wait-timeout v0.2.1
   Compiling lyon_geom v1.0.6
   Compiling hashbrown v0.14.5
   Compiling anstyle-query v1.1.3
   Compiling is_terminal_polyfill v1.70.1
   Compiling vlq v0.5.1
   Compiling stable_deref_trait v1.2.0
   Compiling float_next_after v1.0.0
   Compiling byteorder v1.5.0
   Compiling rustc-hash v2.1.1
   Compiling colorchoice v1.0.4
   Compiling rawpointer v0.2.1
   Compiling anstream v0.6.19
   Compiling lyon_path v1.0.7
   Compiling fxhash v0.2.1
   Compiling servo_arc v0.4.1
   Compiling derive_more v2.0.1
   Compiling simba v0.9.0
   Compiling cssparser v0.33.0
   Compiling cssparser v0.35.0
   Compiling dashmap v5.5.3
   Compiling num-rational v0.4.2
   Compiling lyon_algorithms v1.0.5
   Compiling lyon_tessellation v1.0.15
   Compiling nalgebra-macros v0.2.2
   Compiling pathdiff v0.2.3
   Compiling new_debug_unreachable v1.0.6
   Compiling data-encoding v2.9.0
   Compiling clap_lex v0.7.5
   Compiling strsim v0.11.1
   Compiling clap_builder v4.5.41
   Compiling lyon v1.0.1
   Compiling rand_core v0.9.3
   Compiling portable-atomic v1.11.1
   Compiling wasm-bindgen-shared v0.2.100
   Compiling cssparser-color v0.1.0
   Compiling ptr_meta_derive v0.1.4
   Compiling rkyv_derive v0.7.45
   Compiling const-str-proc-macro v0.3.2
   Compiling ptr_meta v0.1.4
   Compiling lightningcss-derive v1.0.0-alpha.43
   Compiling const-str v0.3.2
   Compiling ppv-lite86 v0.2.21
   Compiling quick-error v1.2.3
   Compiling fnv v1.0.7
   Compiling bit-vec v0.8.0
   Compiling rusty-fork v0.3.0
   Compiling rand_chacha v0.9.0
   Compiling bit-set v0.8.0
   Compiling fs-err v2.11.0
   Compiling rand v0.9.1
   Compiling rand_xorshift v0.4.0
   Compiling clap v4.5.41
   Compiling predicates-core v1.0.9
   Compiling doc-comment v0.3.3
   Compiling unarray v0.1.4
   Compiling bumpalo v3.19.0
   Compiling proptest v1.7.0
   Compiling wasm-bindgen-backend v0.2.100
   Compiling float-cmp v0.10.0
   Compiling half v2.6.0
   Compiling camino v1.1.10
   Compiling semver v1.0.26
   Compiling cargo-platform v0.1.9
   Compiling indexmap v2.10.0
   Compiling toml_datetime v0.6.11
   Compiling serde_spanned v0.6.9
   Compiling plotters-backend v0.3.7
   Compiling winnow v0.7.12
   Compiling assert_cmd v2.0.17
   Compiling unicode-width v0.2.1
   Compiling difflib v0.4.0
   Compiling rustversion v1.0.21
   Compiling toml_write v0.1.2
   Compiling cargo_metadata v0.14.2
   Compiling ciborium-io v0.2.2
   Compiling termtree v0.5.1
   Compiling normalize-line-endings v0.3.0
   Compiling predicates v3.1.3
   Compiling predicates-tree v1.0.12
   Compiling ciborium-ll v0.2.2
   Compiling console v0.15.11
   Compiling parcel_sourcemap v2.1.1
   Compiling skeptic v0.13.7
   Compiling lightningcss v1.0.0-alpha.67
   Compiling env_filter v0.1.3
   Compiling toml_edit v0.22.27
   Compiling svg_metadata v0.3.0
   Compiling plotters-svg v0.3.7
   Compiling wasm-bindgen-macro-support v0.2.100
   Compiling vexy-svgo-core v1.0.35 (/Users/adam/Developer/vcs/github.vexyart/vexy-svgo/crates/core)
   Compiling nalgebra v0.33.2
error[E0432]: unresolved import `jsonschema`
   --> crates/core/src/parser/config.rs:138:5
    |
138 | use jsonschema::JSONSchema;
    |     ^^^^^^^^^^ use of unresolved module or unlinked crate `jsonschema`
    |
    = help: if you wanted to use a crate named `jsonschema`, use `cargo add jsonschema` to add it to your `Cargo.toml`

   Compiling bstr v1.12.0
For more information about this error, try `rustc --explain E0432`.
error: could not compile `vexy-svgo-core` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
[ERROR] Tests failed
~/Developer/vcs/github.vexyart/vexy-svgo
[17:14:00] $ 